提交JVM中的GC参数